welcome.lessons.welcome.loopwhile.LoopWhile.scala.code
while(estFacemur!=1)
{	avance()
}
